@@ -74,6 +74,15 @@
 #endif
 
 /*====================================================================*
+ *   ethertypes;
+ *--------------------------------------------------------------------*/
+
+#define ETH_P_HP10 0x887B
+#define ETH_P_HCP  0x88B7
+#define ETH_P_HPAV 0x88E1
+#define ETH_P_1905 0x893A
+
+/*====================================================================*
  *   channel flagword bitmasks;
  *--------------------------------------------------------------------*/
 
